# EduVision

./: .gitignore  README.md
Geo/: README.md  main.py
design/: README.md
face-auth-service/: README.md  attendance_utils.py  auth_utils.py  bootstrap.py  dbConnect.py  face_utils.py  main.py  pyproject.toml  requirements.txt
face-auth-service/db/: __init__.py  dbFunctions.py
face-auth-service/schemas/: __init__.py  authClasses.py  authStudent.py  sessionClasses.py
mobile/: .gitignore  App.js  README.md  app.json  babel.config.js  package-lock.json  package.json
mobile/screens/: AttendanceScreen.js  AuditScreen.js  FaceScanScreen.js  LoginScreen.js  QRCodeScreen.js  QRScanScreen.js
mobile/utils/: api.js
scripts/: set-demo-url.ps1
teacher-webapp/: .gitignore  index.html  package-lock.json  package.json
teacher-webapp/src/: App.css  App.jsx  Attendance.jsx  AttendanceTable.jsx  Dashboard.jsx  index.css
teacher-webapp/src/components/: Sidebar.jsx  cards.jsx
teacher-webapp/src/pages/: Attendance.jsx  Dashboard.jsx  Login.jsx
teacher-webapp/src/util/: Session.jsx
teacher-webapp/src/utils/: AttendanceTable.jsx  Session.jsx  api.js
